--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,6 +21,9 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    prefer_const_constructors : avoid_types_on_closure_parameters
+    avoid_print: false
+    lines_longer_than_80_chars: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
